@@ -2,6 +2,8 @@ Changes in openair 0.5-4 [2011-08-04]
 =====================================
 *	Use roxygen2 for package documentation and future
 	maintainability
+*	Allow split by date to handle mutiple sites and output a new
+	column controlled by argument 'name'
 
 Changes in openair 0.5-0 [2011-08-04]
 =====================================
